--- a/public/project/agricultureguate/index.html
+++ b/public/project/agricultureguate/index.html
@@ -795,7 +795,7 @@
 <p><strong>FUNDING</strong><br>
 This research is supported by NSF Human-Environment and Geographical Sciences (HEGS) Grant BCS2049657: &ldquo;Rainfall variability, extreme events, and vulnerability in heterogeneous social and environmental systems'', PI: Kevin Anchukaitis, coPIs: Matthew Taylor, Diego Pons, Tom Evans, Diana Liverman.</p>
 <p><strong>MEDIA</strong><br>
--<a href="https://www.lapresse.ca/international/amerique-latine/2023-08-09/changements-climatiques/el-nino-menace-une-region-deja-eprouvee.php#" target="_blank" rel="noopener">El Niño menace une région déjà éprouvée</a></p>
+-<a href="https://www.lapresse.ca/international/amerique-latine/2023-08-09/changements-climatiques/el-nino-menace-une-region-deja-eprouvee.php#" target="_blank" rel="noopener">El Ni√±o menace une r√©gion d√©j√† √©prouv√©e</a></p>
 
     </div>
 
